# pxr-challenge

./: .gitignore  README.md  phase1_honest_metrics_report.csv  pyproject.toml  requirements.txt
data/: README.md
models/: README.md
reports/: external_chembl_pxr_signal_runbook.md  remaining_insights_runbook.md  sub040_experiment_runbook.md  writeup.md
scripts/: assemble_neural_ensemble.py  build_ensemble.py  build_molecular_ensemble.py  create_phase1_cross_validation_splits.py  enumerate_matched_molecular_pairs.py  prepare_final_submission.py  run_asymmetric_graph_experiment.py  run_cross_validation_audit.py  run_curve_multitask_experiment.py  run_domain_uncertainty_gate_experiment.py  run_external_pxr_signal_experiment.py  run_honest_audit.py  run_orthogonal_signal_experiment.py  run_remaining_insights_experiments.py  run_structure_assay_signal_experiment.py  run_sub040_signal_experiment.py  select_best_candidate.py  train_chemeleon.py  train_chemeleon_multitask_model.py  train_conformation_predictor.py  train_cv.py  train_final.py  train_graph_multitask_predictor.py  train_inactive_weight.py  train_suiren_inactive_tail_weighted_model.py
submissions/: README.md  auxiliary_residual_high_upside_submission.csv  big_push_guarded_aux_residual.csv  chemeleon_mt_lr3e-04_3seed.csv  chemeleon_mt_lr3e-04_s0.csv  chemeleon_mt_lr3e-04_s1.csv  chemeleon_mt_lr3e-04_s2.csv  ens_cm_lr3e-04_3seed_sur_w0.250.csv  ens_cm_lr3e-04_3seed_sur_w0.300.csv  ens_cm_lr3e-04_3seed_sur_w0.325.csv  ens_cm_lr3e-04_3seed_sur_w0.350.csv  ens_cm_lr3e-04_3seed_sur_w0.400.csv  (+2 more)
weights/: README.md  (+5 more)
(+14 files in other folders)
