[project]
name = "openadmet-pxr-submission"
version = "0.1.0"
description = "Leakage-aware OpenADMET PXR activity prediction submission pack."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "rdkit",
    "lightgbm",
    "xgboost",
    "pyarrow",
]

[project.optional-dependencies]
neural = [
    "torch>=2.0",
    "chemprop>=2.2.3",
    "lightning>=2.4",
    "torch-geometric",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
